--- a/cv/templates/static/package.json
+++ b/cv/templates/static/package.json
@@ -37,6 +37,7 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.26",
     "@fortawesome/free-solid-svg-icons": "^5.12.0",
     "@fortawesome/react-fontawesome": "^0.1.8",
-    "history": "^4.10.1"
+    "history": "^4.10.1",
+    "react-router": "^5.1.2"
   }
 }
